RESOLVED FIXED42123
[Cairo] Incorrect Test for Text Fill
https://bugs.webkit.org/show_bug.cgi?id=42123
Summary [Cairo] Incorrect Test for Text Fill
Brent Fulgham
Reported 2010-07-12 18:04:13 PDT
Mihnea Ovidenea reported that several test cases fail because of an invalid test in FontCairo.cpp: bfulgham@bfulgham-Win7VM ~/WebKit/WebCore/platform/graphics/cairo $ svn diff FontCairo.cpp Index: FontCairo.cpp =================================================================== --- FontCairo.cpp (revision 62870) +++ FontCairo.cpp (working copy) @@ -73,7 +73,7 @@ FloatSize shadowSize; float shadowBlur = 0; Color shadowColor; - bool hasShadow = context->textDrawingMode() == cTextFill && + bool hasShadow = context->textDrawingMode() & cTextFill && context->getShadow(shadowSize, shadowBlur, shadowColor); // TODO: Blur support Tests that show this problem: 1. fast/text/stroking-decorations.html 2. fast/text/stroking.html 3. fast/text/shadow-translucent-fill.html
Attachments
Correct shadow test for stroke & fill case (1.59 KB, patch)
2010-07-12 18:12 PDT, Brent Fulgham
no flags
Correct shadow test for (stroke & fill) case. (1.59 KB, patch)
2010-07-12 18:16 PDT, Brent Fulgham
no flags
Correct style warnings. (1.69 KB, patch)
2010-07-12 18:17 PDT, Brent Fulgham
krit: review+
Brent Fulgham
Comment 1 2010-07-12 18:12:34 PDT
Created attachment 61306 [details] Correct shadow test for stroke & fill case
WebKit Review Bot
Comment 2 2010-07-12 18:14:17 PDT
Attachment 61306 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/graphics/cairo/FontCairo.cpp:76: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 3 2010-07-12 18:16:04 PDT
Created attachment 61307 [details] Correct shadow test for (stroke & fill) case. Update that corrects some style warnings.
WebKit Review Bot
Comment 4 2010-07-12 18:17:03 PDT
Attachment 61307 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/graphics/cairo/FontCairo.cpp:76: Boolean expressions that span multiple lines should have their operators on the left side of the line instead of the right side. [whitespace/operators] [4] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Brent Fulgham
Comment 5 2010-07-12 18:17:45 PDT
Created attachment 61308 [details] Correct style warnings. Attach the correct file this time!
Dirk Schulze
Comment 6 2010-07-12 22:15:45 PDT
Comment on attachment 61308 [details] Correct style warnings. r=me
Dirk Schulze
Comment 7 2010-07-12 22:16:15 PDT
Please add title and bug link to the changelog
Martin Robinson
Comment 8 2010-07-12 23:21:32 PDT
Note You need to log in before you can comment on or make changes to this bug.