2010-07-12  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Dirk Schulze.

        [Cairo] Incorrect Test for Text Fill
        https://bugs.webkit.org/show_bug.cgi?id=42123

        Unskip tests which cover text stroking and add pixel dump results for
        them via the GTK+ port.

        * platform/gtk/Skipped: Unskip passing tests.
        * platform/gtk/fast/text/stroking-decorations-expected.checksum: Added.
        * platform/gtk/fast/text/stroking-decorations-expected.png: Added.
        * platform/gtk/fast/text/stroking-decorations-expected.txt: Added.
        * platform/gtk/fast/text/stroking-expected.checksum: Added.
        * platform/gtk/fast/text/stroking-expected.png: Added.
        * platform/gtk/fast/text/stroking-expected.txt: Added.
2010-07-12  Mihnea Ovidenea  <mihnea@adobe.com>

        Reviewed by Dirk Schulze.

        [Cairo] Incorrect Test for Text Fill
        https://bugs.webkit.org/show_bug.cgi?id=42123

        Correct test used for text shadow.  It currently checks for
        equality with cTextFill.  However, this test fails if the
        text drawing mode is set to 'cTextFill | cTextStroke'.  Fix
        is to modify the test to be like other Cairo uses of the
        text drawing mode, and check for the cTextFill bit being
        set, not for equality with the bit.

        * platform/graphics/cairo/FontCairo.cpp:
        (WebCore::Font::drawGlyphs):

Canonical link: https://commits.webkit.org/54032@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63176 268f45cc-cd09-0410-ab3c-d52691b4dbfc